--- a/DMS-Jasmine/TEPLQMS/TEPLQMS/TEPLQMS.csproj
+++ b/DMS-Jasmine/TEPLQMS/TEPLQMS/TEPLQMS.csproj
@@ -272,6 +272,8 @@
     <Compile Include="Areas\Admin\Controllers\ExternalCategoryController.cs" />
     <Compile Include="Areas\Admin\Controllers\ExternalDocumentController.cs" />
     <Compile Include="Areas\Admin\Controllers\ExternalSubCategoryController.cs" />
+    <Compile Include="Areas\Admin\Controllers\FunctionController.cs" />
+    <Compile Include="Areas\Admin\Controllers\LocationController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProjectController.cs" />
     <Compile Include="Areas\Admin\Controllers\AllPrintRequestsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SectionController.cs" />
@@ -755,6 +757,8 @@
     <Content Include="Areas\Admin\Views\Users2\Index.cshtml" />
     <Content Include="Areas\Admin\Views\DirectUpload\Index.cshtml" />
     <Content Include="Areas\Admin\Views\AllPrintRequests\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Function\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Location\Index.cshtml" />
     <None Include="assets\js\jqueryval\jquery.validate-vsdoc.js" />
     <Content Include="assets\js\jquery-ui.min.js" />
     <Content Include="assets\js\jquery.min.js" />
