Sharepoint reference and logger block file was added

--- a/DMS-Jasmine/TEPLQMS/TEPLQDMSWS/App.config
+++ b/DMS-Jasmine/TEPLQMS/TEPLQDMSWS/App.config
@@ -7,7 +7,7 @@
 		<listeners>
 			<add name="Error Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="L:\Logs\AppLogs\QDMSWS\ErrorLog.log" footer="----------------------------------" formatter="ErrorFormatter" header="" rollInterval="Day" traceOutputOptions="DateTime, Timestamp" filter="Error" />
 			<add name="Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="L:\Logs\AppLogs\QDMSWS\InfoLog.log" footer="----------------------------------" formatter="InfoFormatter" header="" rollInterval="Day" traceOutputOptions="DateTime, Timestamp" filter="Information" />
-			<add name="Event Log Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="QDMSWS" formatter="ErrorFormatter" log="QDMSWS" machineName="." traceOutputOptions="Timestamp, Callstack" filter="Critical"/>
+			<add name="Event Log Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="QDMSWS" formatter="ErrorFormatter" log="QDMSWS" machineName="." traceOutputOptions="Timestamp, Callstack" filter="Critical" />
 		</listeners>
 		<formatters>
 			<add type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" template="Timestamp: {timestamp(local)}&#xA; Message: {message}&#xA; Category: {category}&#xA; Priority: {priority}&#xA; EventId: {eventid}&#xA; Severity: {severity}&#xA; Title:{title}&#xA; Machine: {localMachine}&#xA; App Domain: {localAppDomain}&#xA; ProcessId: {localProcessId}&#xA; Process Name: {localProcessName}&#xA; Thread Name: {threadName}&#xA; Win32 ThreadId:{win32ThreadId}&#xA;" name="InfoFormatter" />
@@ -48,8 +48,8 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
 	<appSettings>
-		<add key="ServiceAccountName" value="tepl\dms.canopus"/>
-		<add key="ServiceAccountPassword" value="Tepl@2023$6"/>
+		<add key="ServiceAccountName" value="tepl\dms.canopus" />
+		<add key="ServiceAccountPassword" value="Tepl@2023$6" />
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
@@ -91,6 +91,10 @@
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
 				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
 			</dependentAssembly>
 		</assemblyBinding>
