PDF Viewer Changes

--- a/DMS-Jasmine/TEPLQMS/Web.config
+++ b/DMS-Jasmine/TEPLQMS/Web.config
@@ -58,7 +58,7 @@
     <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
     <add key="owin:AutomaticAppStartup" value="false" />
     <add key="LDAPPath" value="LDAP://tataelectronics.co.in" />
-    <add key="EmailFrom" value="dms.support@tataelectronics.co.in" />
+    <add key="EmailFrom" value="telc.dmssupport@tataelectronics.co.in" />
     <add key="EmailUserName" value="rajesh.m-ext" />
     <add key="EmailPassword" value="#6e22M@y$2k01" />
     <add key="SMTPHOST" value="172.21.5.125" />
