--- a/DMS-MG/TEPLQMS/Web.config
+++ b/DMS-MG/TEPLQMS/Web.config
@@ -14,8 +14,8 @@
   </configSections>
   <loggingConfiguration name="" tracingEnabled="false" defaultCategory="General" logWarningsWhenNoCategoriesMatch="false">
     <listeners>
-      <add name="Error Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="D:\JasmineDMSMP\AppLogs\ErrorLog.log" footer="----------------------------------" formatter="ErrorFormatter" header="" rollInterval="Day" traceOutputOptions="DateTime, Timestamp" filter="All" />
-      <add name="Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="D:\JasmineDMSMP\AppLogs\InfoLog.log" footer="----------------------------------" formatter="InfoFormatter" header="" rollInterval="Day" traceOutputOptions="DateTime, Timestamp" filter="All" />
+      <add name="Error Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="D:\MGDMSMP\AppLogs\ErrorLog.log" footer="----------------------------------" formatter="ErrorFormatter" header="" rollInterval="Day" traceOutputOptions="DateTime, Timestamp" filter="All" />
+      <add name="Rolling Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="D:\MGDMSMP\AppLogs\InfoLog.log" footer="----------------------------------" formatter="InfoFormatter" header="" rollInterval="Day" traceOutputOptions="DateTime, Timestamp" filter="All" />
       <add name="Event Log Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="QMS" formatter="ErrorFormatter" log="QMS" machineName="." traceOutputOptions="Timestamp, Callstack" />
     </listeners>
     <formatters>
@@ -64,10 +64,10 @@
     <add key="SMTPHOST" value="172.21.5.125" />
     <add key="SMTPPORT" value="25" />
     <add key="DefaultPassword" value="admin" />
-    <add key="LogPath" value="D:\JasmineDMSMP\AppLogs\QDMSMP\" />
-    <add key="TempFolder" value="D:\JasmineDMSFiles\TempPath\" />
-    <add key="StoragePath" value="D:\JasmineDMSFiles\" />
-    <add key="BackUpPath" value="D:\JasmineDMSFiles\Backup" />
+    <add key="LogPath" value="D:\MGDMSMP\AppLogs\QDMSMP\" />
+    <add key="TempFolder" value="D:\MGDMSFiles\TempPath\" />
+    <add key="StoragePath" value="D:\MGDMSFiles\" />
+    <add key="BackUpPath" value="D:\MGDMSFiles\Backup" />
     <add key="HistoryPath" value="\Backup\History" />
 	<add key="HistoryBackUpPath" value="History" />
     <add key="DraftFolder" value="DraftDocuments" />
@@ -77,7 +77,7 @@
     <add key="TemplateFolder" value="TemplateDocuments" />
     <add key="ExtDocumentFolder" value="ExternalDocuments" />
     <add key="EncryptionKey" value="T3pl2@22" />
-    <add key="CompanyCode" value="TCPL" />
+    <add key="CompanyCode" value="TEPL" />
     <add key="WorkflowID" value="464DBB1A-0AF6-4D32-BC59-9C7C43305432" />
 	  <add key="PrintWorkflowID" value="646c8b43-e55b-4117-bc18-681461bca63f" />
     <add key="WebSiteURL" value="http://172.21.5.96:5555/" />
@@ -98,14 +98,14 @@
     <add key="ServicePassword" value="T3p1#dw$#22" />
     <add key="PDFViewerURL" value="http://localhost:55608/Default.htm?" />
 	 <add key="QMSHeadEmail" value="rajesh.m-ext@tataelectronics.co.in" />
-	 <add key="AuthCookieName" value="tcplqdmsmp" />
+	 <add key="AuthCookieName" value="teplqdmsmp" />
   </appSettings>
   <connectionStrings>
     <!--<add name="WFDBCon" connectionString="Server=TELMPDMS01;Database=DMSMP;User Id=sa;password=1@TEPLSql;" providerName="System.Data.SqlClient" />
     <add name="DBCon" connectionString="Server=TELMPDMS01;Database=DMSMP;User Id=sa;password=1@TEPLSql;" providerName="System.Data.SqlClient" />-->
 
-	  <add name="WFDBCon" connectionString="Server=172.21.5.100\DMSSQLSERVER;Database=JasminDMSMP;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />
-	  <add name="DBCon" connectionString="Server=172.21.5.100\DMSSQLSERVER;Database=JasminDMSMP;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />
+	  <add name="WFDBCon" connectionString="Server=103.169.237.94,14191;Database=MGDMSMP;User Id=sa;password=canopusGBS#1405;" providerName="System.Data.SqlClient" />
+	  <add name="DBCon" connectionString="Server=103.169.237.94,14191;Database=MGDMSMP;User Id=sa;password=canopusGBS#1405;" providerName="System.Data.SqlClient" />
 	  
 	  
     <!--<add name="WFDBCon" connectionString="Server=172.21.5.168;Database=QDMSMig;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />
