--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@
 /DMS-Jasmine/packages
 /DMS-Jasmine/TEPLQDMSWS/TEPLQDMSWS.csproj.user
 /Jasmine DMS changes.txt
+/Publish
+/Publish_0710_12PM.zip
+*.zip
