Upload Document Page Work changes under Admin

--- a/DMS-MG/TEPLQMS/Web.config
+++ b/DMS-MG/TEPLQMS/Web.config
@@ -79,7 +79,8 @@
     <add key="EncryptionKey" value="T3pl2@22" />
     <add key="CompanyCode" value="TEPL" />
     <add key="WorkflowID" value="464DBB1A-0AF6-4D32-BC59-9C7C43305432" />
-	  <add key="PrintWorkflowID" value="646c8b43-e55b-4117-bc18-681461bca63f" />
+	<add key="DirectUploadWorkflowID" value="bf4da810-9f38-403c-978f-ab08c08026d4" />
+	<add key="PrintWorkflowID" value="646c8b43-e55b-4117-bc18-681461bca63f" />
     <add key="WebSiteURL" value="http://172.21.5.96:5555/" />
     <add key="ViewerURL" value="http://172.21.5.96:12003/docviewer" />
     <add key="LoginRegEx" value="^[a-zA-Z]+[a-zA-Z0-9+_.-]+@tataelectronics.co.in$" />
