Direct Upload Changes

--- a/DMS-Jasmine/TEPLQMS/Web.config
+++ b/DMS-Jasmine/TEPLQMS/Web.config
@@ -104,9 +104,10 @@
     <!--<add name="WFDBCon" connectionString="Server=TELMPDMS01;Database=DMSMP;User Id=sa;password=1@TEPLSql;" providerName="System.Data.SqlClient" />
     <add name="DBCon" connectionString="Server=TELMPDMS01;Database=DMSMP;User Id=sa;password=1@TEPLSql;" providerName="System.Data.SqlClient" />-->
 
-	  <add name="WFDBCon" connectionString="Server=172.21.5.100\DMSSQLSERVER;Database=JasminDMSMP;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />
-	  <add name="DBCon" connectionString="Server=172.21.5.100\DMSSQLSERVER;Database=JasminDMSMP;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />
-	  
+	  <add name="WFDBCon" connectionString="Server=10.75.16.57;Database=JasminDMSMP;User Id=DMSJASMINE_UAT;password=dmsjasmineUAT@123;"
+	    providerName="System.Data.SqlClient"/>
+	  <add name="DBCon" connectionString="Server=10.75.16.57;Database=JasminDMSMP;User Id=DMSJASMINE_UAT;password=dmsjasmineUAT@123;"
+	    providerName="System.Data.SqlClient"/>
 	  
     <!--<add name="WFDBCon" connectionString="Server=172.21.5.168;Database=QDMSMig;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />
   <add name="DBCon" connectionString="Server=172.21.5.168;Database=QDMSMig;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />-->
