--- a/DMS-MG/TEPLQMS/Web.config
+++ b/DMS-MG/TEPLQMS/Web.config
@@ -79,7 +79,7 @@
     <add key="EncryptionKey" value="T3pl2@22" />
     <add key="CompanyCode" value="TEPL" />
     <add key="WorkflowID" value="464DBB1A-0AF6-4D32-BC59-9C7C43305432" />
-	<add key="DirectUploadWorkflowID" value="bf4da810-9f38-403c-978f-ab08c08026d4" />
+	<add key="DirectUploadWorkflowID" value="713e68c6-7b1c-4746-abf1-b5a6e4f5a4b8" />
 	<add key="PrintWorkflowID" value="646c8b43-e55b-4117-bc18-681461bca63f" />
     <add key="WebSiteURL" value="http://172.21.5.96:5555/" />
     <add key="ViewerURL" value="http://172.21.5.96:12003/docviewer" />
@@ -102,17 +102,11 @@
 	 <add key="AuthCookieName" value="teplqdmsmp" />
   </appSettings>
   <connectionStrings>
-    <!--<add name="WFDBCon" connectionString="Server=TELMPDMS01;Database=DMSMP;User Id=sa;password=1@TEPLSql;" providerName="System.Data.SqlClient" />
-    <add name="DBCon" connectionString="Server=TELMPDMS01;Database=DMSMP;User Id=sa;password=1@TEPLSql;" providerName="System.Data.SqlClient" />-->
-
-	  <add name="WFDBCon" connectionString="Server=103.169.237.94,14191;Database=MGDMSMP;User Id=sa;password=canopusGBS#1405;" providerName="System.Data.SqlClient" />
-	  <add name="DBCon" connectionString="Server=103.169.237.94,14191;Database=MGDMSMP;User Id=sa;password=canopusGBS#1405;" providerName="System.Data.SqlClient" />
-	  
-	  
-    <!--<add name="WFDBCon" connectionString="Server=172.21.5.168;Database=QDMSMig;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />
-  <add name="DBCon" connectionString="Server=172.21.5.168;Database=QDMSMig;User Id=sa;password=T3P1_H4r@21$;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="WFDBCon" connectionString="Data Source=172.21.5.100\DMSSQLSERVER;Initial Catalog=QDMSNPI;Integrated Security=true;" providerName="System.Data.SqlClient" />
-    <add name="DBCon" connectionString="Data Source=172.21.5.100\DMSSQLSERVER;Initial Catalog=QDMSNPI;Integrated Security=true;" providerName="System.Data.SqlClient" />-->
+   
+	  <add name="WFDBCon" connectionString="Server=10.75.16.57;Database=MGDMSMP;User Id=DMSMG_UAT;password=dmsmgUAT@123;" providerName="System.Data.SqlClient" />
+	  <add name="DBCon" connectionString="Server=10.75.16.57;Database=MGDMSMP;User Id=DMSMG_UAT;password=dmsmgUAT@123;" providerName="System.Data.SqlClient" />
+		  
+    
     <add name="DataBaseEntities" connectionString="metadata=res://*/Models.Database.EntityDataModel.csdl|res://*/Models.Database.EntityDataModel.ssdl|res://*/Models.Database.EntityDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.21.5.100\DMSSQLSERVER;initial catalog=QDMSNPI;user id=sa;password=qms123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <!--
